Mon Oct 15 04:07:30 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING: automake 1.12.4 is now used to generate snapshots and
	  releases.

Sat Oct 13 09:34:21 GMT 2012  Olly Betts <olly@survex.com>

	* weight/weightinternal.h: Revert addition of "#include <config.h>" in
	  r16820.
	* HACKING: Document that we don't include <config.h> from header
	  files, and the reason why.

Sat Oct 13 09:00:23 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Fix documentation comment typos:
	  "covert" -> "convert".

Thu Oct 11 12:28:30 GMT 2012  Olly Betts <olly@survex.com>

	* docs/valueranges.rst: Update documentation to reflect change in
	  Xapian 1.1.2 - DateValueRangeProcessor and StringValueRangeProcessor
	  now support a prefix or suffix.

Mon Oct 01 05:05:54 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING: Try to make it clearer we're looking for a dual-licence
	  on submitted patches.

Tue Sep 25 08:09:08 GMT 2012  Olly Betts <olly@survex.com>

	* common/Makefile.mk,common/append_filename_arg.h,
	  tests/harness/unixcmds.cc: Split out append_filename_argument() into
	  its own file so it can be used elsewhere.

Tue Sep 25 06:46:03 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Mark MSetIterator::at_end() and
	  ESetIterator::at_end() as @private @internal so that they don't
	  appear in the API docs.

Tue Sep 25 06:45:07 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Remove FIXMEs about converting MSetIterator
	  and ESetIterator to use Internal classes - as HACKING notes, the
	  current implementation is that way for performance reasons.

Tue Sep 25 06:36:37 GMT 2012  Olly Betts <olly@survex.com>

	* tests/harness/unixcmds.cc: Escape filenames on POSIX platforms by
	  wrapping in single quotes and specially handling single quotes in
	  the filename - previously newlines in filenames got eaten by the
	  shell.

Tue Sep 25 06:32:36 GMT 2012  Olly Betts <olly@survex.com>
