@@ -49,10 +49,14 @@
 #include "stringutils.h"
 #include "str.h"
 
+#ifdef XAPIAN_HAS_BRASS_BACKEND
 #include "backends/brass/brass_compact.h"
 #include "backends/brass/brass_version.h"
+#endif
+#ifdef XAPIAN_HAS_CHERT_BACKEND
 #include "backends/chert/chert_compact.h"
 #include "backends/chert/chert_version.h"
+#endif
 
 #include <xapian/database.h>
 #include <xapian/error.h>
@@ -453,6 +457,7 @@ Compactor::Internal::compact(Xapian::Compactor & compactor)
 	compact_chert(compactor, destdir.c_str(), sources, offset, block_size,
 		      compaction, multipass, last_docid);
 #else
+	(void)compactor;
 	throw Xapian::FeatureUnavailableError("Chert backend disabled at build time");
 #endif
     } else if (backend == BRASS) {
@@ -460,6 +465,7 @@ Compactor::Internal::compact(Xapian::Compactor & compactor)
 	compact_brass(compactor, destdir.c_str(), sources, offset, block_size,
 		      compaction, multipass, last_docid);
 #else
+	(void)compactor;
 	throw Xapian::FeatureUnavailableError("Brass backend disabled at build time");
 #endif
     }
